--- a/cems-api.yml
+++ b/cems-api.yml
@@ -81,7 +81,25 @@ paths:
           description: "Not authenticated"
         403:
           description: "Not authorized"
-          
+
+  /quick-login/{hash}:
+    post:
+      tags:
+        - "Login"
+      summary: "Grants API access to the current user based on the given hash"
+      description: ""
+      responses:
+        200: 
+          description: "Success"
+          schema:
+            $ref: "#/definitions/LoginResponse"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "Not authorized"
+        404:
+          description: "Quicklink with hash not found"
+
   /note:
     post:
       tags:
