--- a/cems-api.yml
+++ b/cems-api.yml
@@ -10,7 +10,7 @@ paths:
   /examresponse:
     post:
       tags:
-        - "User"
+        - "Enrollments"
       summary: "Creates an Exam Response for  a given order item and exam, with the provided answers"
       description: ""
       consumes:
@@ -938,7 +938,73 @@ paths:
           description: "Not authorized"
         406:
           description: "Company already has top-level organizational unit or company ID is invalid"
-          
+
+  /company/{companyId}/organizational-unit/import/add:
+    post:
+      tags:
+        - "Organizational Unit"
+      summary: "Import a CSV to add organizational units"
+      description: ""
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+        - name: "company_id"
+          in: "path"
+          description: ""
+          required: true
+          type: "integer"
+        - name: "import_file"
+          in: "formData"
+          description: ""
+          required: true
+          type: "file"
+      responses:
+        202:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/ImportNotification"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "Not authorized"
+        406:
+          description: "An error occurred while validating the file"
+
+  /company/{companyId}/organizational-unit/import/rename:
+    post:
+      tags:
+        - "Organizational Unit"
+      summary: "Import a CSV to rename organizational units"
+      description: ""
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+        - name: "company_id"
+          in: "path"
+          description: ""
+          required: true
+          type: "integer"
+        - name: "import_file"
+          in: "formData"
+          description: ""
+          required: true
+          type: "file"
+      responses:
+        202:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/ImportNotification"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "Not authorized"
+        406:
+          description: "An error occurred while validating the file"
+
   /company/{companyId}/organizational-unit/list:
     get:
       tags:
@@ -3327,6 +3393,47 @@ paths:
         403:
           description: "Not authorized"
 
+  /user/reset-password/password:
+    post:
+      tags:
+        - "User"
+      summary: "Updates the password of a user based on hash"
+      description: "Updates the password of a user based on the provided hash from a reset password request"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+        - name: "user_hash"
+          in: "query"
+          description: ""
+          required: true
+          type: "string"
+        - name: "body"
+          in: "body"
+          description: ""
+          schema:
+            type: "object"
+            required: 
+              - "password"
+              - "company_id"
+            properties: 
+              password: 
+                type: "string"
+                example: "1234abcd"
+              company_id: 
+                type: "number"
+                example: 4
+      responses:
+        200:
+          description: "Success"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "Not authorized"
+        404:
+          description: "Company not found or hash provided does not exist"
+
   /user/{userId}:
     put:
       tags:
@@ -5264,7 +5371,19 @@ definitions:
           type: "string"
         example: 
           - "Successfully saved the organizational unit."
-    
+
+  ImportNotification:
+    type: "object"
+    required: 
+      - "messages"
+    properties: 
+      messages: 
+        type: "array"
+        items: 
+          type: "string"
+        example: 
+          - "The import was accepted. You will be notified when the process is complete."
+
   OrgUnitList:
     type: "object"
     required: 
