--- a/cems-api.yml
+++ b/cems-api.yml
@@ -820,6 +820,66 @@ paths:
         404:
           description: "Company or Corp Admin Report not found"
 
+  /company/{companyId}/reportschedule:
+    get:
+      tags:
+        - "Reports"
+      summary: "Retrieve all report schedule objects for the logged in user"
+      description: ""
+      produces:
+      - "application/json"
+      parameters:
+        - name: "companyId"
+          in: "path"
+          description: ""
+          required: true
+          type: "integer"
+        - name: "corp_admin_report_id"
+          in: "query"
+          description: "Required if sending filtered_report_id"
+          type: "integer"
+        - name: "filtered_report_id"
+          in: "query"
+          description: ""
+          type: "integer"
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/ReportScheduleResponse"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "Not authorized"
+        404:
+          description: "Company, Corp Admin Report, or Filtered Report not found"
+    post:
+      tags:
+        - "Reports"
+      summary: "Sets a new report schedule"
+      description: ""
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+        - name: "body"
+          in: "body"
+          description: "NOTE: laterDate will be ignored if recurrenceRule is set"
+          schema:
+            $ref: "#/definitions/ReportScheduleBody"
+      responses:
+        200:
+          description: "Success"
+        401:
+          description: "Not authenticated"
+        403:
+          description: "Not authorized"
+        404:
+          description: "Company not found"
+        406:
+          description: "Not acceptable format to create report schedule"
+
   /company/{companyId}/filterset:
     get:
       tags:
@@ -5328,6 +5388,100 @@ definitions:
                 type: "number"
               example: 
                 - 1
+
+  ReportScheduleResponse:
+    type: "object"
+    required: 
+      - "data"
+    properties: 
+      data: 
+        type: "array"
+        items: 
+          type: "object"
+          properties: 
+            id: 
+              type: "number"
+              example: 4342
+            corp_admin_report_id: 
+              type: "number"
+              example: 14
+            filtered_report_id: 
+              type: "number"
+              example: 11394
+            recipients: 
+              type: "string"
+              example: "jsmith123@example.com"
+            next_occurrence: 
+              type: "string"
+              example: "07/06/2020"
+            recurrence: 
+              required: 
+                - "freq"
+                - "count"
+                - "interval"
+                - "byday"
+              properties: 
+                freq: 
+                  type: "string"
+                  example: "WEEKLY"
+                count: 
+                  type: "number"
+                  example: 2
+                interval: 
+                  type: "number"
+                  example: 2
+                byday: 
+                  type: "string"
+                  example: "MO"
+              type: "object"
+            human_readable_rule: 
+              type: "string"
+              example: "every other week on Monday, starting from 6/24/20, 2 times"
+
+  ReportScheduleBody:
+    type: "object"
+    required: 
+      - "corpAdminReportId"
+      - "filteredReportId"
+      - "recipients"
+      - "recurrenceRule"
+    properties: 
+      corpAdminReportId: 
+        type: "number"
+        example: 14
+      filteredReportId: 
+        type: "number"
+        example: 11394
+      recipients: 
+        type: "array"
+        items: 
+          type: "string"
+        example: 
+          - "jsmith123@example.com"
+          - "jdoe987@example.com"
+      laterDate: 
+        type: "string"
+        example: "07/01/2020"
+      recurrenceRule:
+        type: "object"
+        required: 
+          - "FREQ"
+          - "INTERVAL"
+          - "BYDAY"
+          - "DSTART"
+        properties: 
+          FREQ: 
+            type: "string"
+            example: "weekly"
+          INTERVAL: 
+            type: "number"
+            example: 2
+          BYDAY: 
+            type: "string"
+            example: "mo"
+          DSTART: 
+            type: "string"
+            example: "09/01/2020"
 
   CompanyFilterSet:
     type: "object"
